Ghidra plugin (#11)
* Add Gradle plugin for bloop

* Import scalaz for util functions

* Add type-to-string conversion

* Add bloop dependency

* More specs and tests

* Add `jvmArgs` to Gradle

* Specify Arch and OS

* Remove unused import

* Specify calling conventions

* Add PB and JSON exporters

* Improve memory range specs

* Begin implementing value specs

* Change default type spec

* Specify stack args

* Add stack args test

* Only spec loaded blocks

* Correct typos in test source

* Begin control flow spec gen

* Add jump test

* Add call test

* Add support for multiple register return values

* Detect tail calls

* Update spec proto

* Spec out returns

* Typo

* Spec out globals

* Update type spec format

* Fix global variables' spec gen

* Improve global variable specs

* Dispose of `TestEnv` after tests

* Parse return address from XML

* Spec for unknown types

* Cleanups

* Add some comments

* Const pointers as a flag

* Add `throws` annotation, change name

* Fix `specifyGlobalVariable`

* Flatten logic

* Make match more explicit

* Improve type spec function

* Annotate variable

* Add check against the cspec

* Remove redundant check

* Remove `break`

* Rewrite tests

* Add type field to function spec

* Add comments regarding return address

* Directly use `isTerminal` to determine stop value

* Add `context_assignments`

* Handle compound returns better

* Make base register optional

* Fix test

* Update spec

* Add `target_address`

* remove skeleton classes and move to anvill package

* update readme

* handle compounds as lists of values bound to a type

* fix spec

Co-authored-by: 2over12 <ian.smith@trailofbits.com>