@@ -69,6 +69,8 @@ dependencies {
   // this extension is built.  
   implementation 'org.scala-lang:scala3-library_3:3.1.3'
   implementation "com.thesamet.scalapb:scalapb-runtime_3:${scalapbVersion}"
+  implementation "com.thesamet.scalapb:scalapb-json4s_3:0.12.0"
+  implementation "org.scalaz:scalaz-core_3:7.3.6"
   testImplementation 'junit:junit:4.13.2'
   testRuntimeOnly files("lib")
 }
@@ -166,6 +168,11 @@ protobuf {
 
 test {
     useJUnit()
+    // set JVM arguments for the test JVM(s)
+    // Copied from some of Ghidra's properties in
+    // 'gradle/javaTestProject.gradle' and
+    // 'Ghidra/Test/IntegrationTest/build.gradle'
+    jvmArgs '--add-exports=java.desktop/sun.awt=ALL-UNNAMED' // Required for Java 17 compatibility
 }
 
 
@@ -175,15 +182,15 @@ sourceSets {
         srcDirs "${protobuf.generatedFilesBaseDir}/main/scalapb"
     }
 
-            proto {
-            // In addition to the default 'src/main/proto'
-            srcDir '../data_specifications'
-            // In addition to the default '**/*.proto' (use with caution).
-            // Using an extension other than 'proto' is NOT recommended,
-            // because when proto files are published along with class files, we can
-            // only tell the type of a file from its extension.
-            include '*.proto'
-        }
+    proto {
+        // In addition to the default 'src/main/proto'
+        srcDir '../data_specifications'
+        // In addition to the default '**/*.proto' (use with caution).
+        // Using an extension other than 'proto' is NOT recommended,
+        // because when proto files are published along with class files, we can
+        // only tell the type of a file from its extension.
+        include '*.proto'
+    }
   }
 }
 // End copy
